[package]
name = "trading-bot"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
base64 = "0.21"
bincode = "1.3"
anyhow = "1.0"
solana-client = "2.1"
solana-sdk = "2.1"
spl-token = "8.0"
dotenv = "0.15"
jupiter-swap-api-client = { git = "https://github.com/jup-ag/jupiter-swap-api-client.git", package = "jupiter-swap-api-client" }
tokio-tungstenite = "0.20"
futures = "0.3"
hmac = "0.12"
serde_json = "1.0"
tracing-subscriber = "0.3"
